# Debate-arena

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_core.py
.claude/: settings.local.json
debate_arena/: __init__.py  config.py
debate_arena/agents/: __init__.py  advocate.py  base.py  judge.py  opponent.py
debate_arena/graph/: __init__.py  debate_graph.py  state.py
debate_arena/skills/: __init__.py
debate_arena/skills/rebuttal/: SKILL.md
debate_arena/skills/research/: SKILL.md
debate_arena/tools/: __init__.py  citation.py  logic.py  search.py
